fix: Project content alignment

--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -118,6 +118,8 @@ a {
 
 .ProjectContent {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   padding: 15px;
@@ -126,6 +128,7 @@ a {
   border-bottom-right-radius: 15px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: flex-start;
   gap: 10px;
   box-sizing: border-box;
